@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-30T01:06:07Z",
+  "timestamp" : "2022-05-30T08:17:14Z",
   "count_outdated" : 304,
   "uniques_outdated" : 157,
-  "count" : 330,
-  "uniques" : 176,
+  "count" : 331,
+  "uniques" : 177,
   "clones" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-05-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
